--- a/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
+++ b/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ResidentialCommunityAssistant
 @using ResidentialCommunityAssistant.Models
 @using ResidentialCommunityAssistant.Services.Models.Home
+@using ResidentialCommunityAssistant.Services.Models.Owner
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
