--- a/ResidentialCommunityAssistant/Views/Owner/AddAddress.cshtml
+++ b/ResidentialCommunityAssistant/Views/Owner/AddAddress.cshtml
@@ -21,6 +21,11 @@
                 <span asp-validation-for="@Model.CityName" class="small text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="@Model.PostCode"></label>
+                <input asp-for="@Model.PostCode" class="form-control" placeholder="1000">
+                <span asp-validation-for="@Model.PostCode" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="LocationTypeId"></label>
                 <select asp-for="LocationTypeId" class="form-control">
                     @foreach (var locationType in Model.LocationTypeViews)
