--- a/ResidentialCommunityAssistant/Views/Owner/ChooseAddress.cshtml
+++ b/ResidentialCommunityAssistant/Views/Owner/ChooseAddress.cshtml
@@ -25,3 +25,7 @@
         <a asp-controller="Home" asp-action="AddressSearch">Търсене на адрес</a>
     </div>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
