--- a/ResidentialCommunityAssistant/Views/Home/NotFoundAddress.cshtml
+++ b/ResidentialCommunityAssistant/Views/Home/NotFoundAddress.cshtml
@@ -2,10 +2,10 @@
     <div>
         <h2>Address not found</h2>
         <p>Адресът, който търсите не е намерен.</p>
-        <p>Всеки адрес трябва да има домоуправител, който първоначално въвежда всички апартаментi и има административни задължения към въведената сграда и живущите в нея.</p>
+        <p>Всеки адрес трябва да има домоуправител, който първоначално въвежда всички апартаменти и има административни задължения към въведената сграда и живущите в нея.</p>
         <p>Желаете ли да станете домоуправител?</p>
     </div>
     <div>
-    <a asp-controller="HomeManager" asp-action="BecomeHomeManager">Да, желая да стана домоуправител</a>
+    <a asp-controller="HomeManager" asp-action="AddAddress">Да, желая да стана домоуправител</a>
     </div>
 
