Extened IdentityUser. Add AllApartaments functionality.

--- a/ResidentialCommunityAssistant/Views/Home/Index.cshtml
+++ b/ResidentialCommunityAssistant/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
         <header>Добре дошли, скъпи съграждани!</header>
         <main>Асистент за жилищната общност(Residential Community Assistant) е приложение за организиране на живущите на дадена сграда.</main>       
     </article>
-    <a asp-controller="Home" asp-action="AddressSearch">Търсене на адрес</a>
+    <p>Моля, проверете дали Вашият адрес е включен в приложението:</p>
+    <a asp-controller="Home" asp-action="AddressSearch" class="btn btn-primary">Търсене на адрес</a>
 </div>
