--- a/ResidentialCommunityAssistant/Views/Owner/CommunityTopics.cshtml
+++ b/ResidentialCommunityAssistant/Views/Owner/CommunityTopics.cshtml
@@ -18,4 +18,9 @@
           
         </div>
     </div>
+    <div class="form-group col-md-3 d-flex justify-content-between">
+        <div class="form-group">
+            <a asp-controller="Owner" asp-action="AllApartaments" class="btn btn-primary">Виж всички апартаменти</a>
+        </div>
+    </div>
 </div>
