--- a/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
+++ b/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ResidentialCommunityAssistant
 @using ResidentialCommunityAssistant.Models
+@using ResidentialCommunityAssistant.Data.Models
 @using ResidentialCommunityAssistant.Services.Models.Home
 @using ResidentialCommunityAssistant.Services.Models.HomeManager
 @using ResidentialCommunityAssistant.Services.Models.Owner
