--- a/ResidentialCommunityAssistant/Views/Home/AddressSearch.cshtml
+++ b/ResidentialCommunityAssistant/Views/Home/AddressSearch.cshtml
@@ -6,17 +6,23 @@
     <div class="form-group">
         <input type ="hidden" asp-for="Id">
         <div class="form-group">
-            <label asp-for="CityName"></label>
+            <div>
+                <label asp-for="CityName"></label>
+            </div>
             <input type="text" asp-for="CityName" placeholder="София">
             <span asp-validation-for="CityName" class="small text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="AddressName"></label>
+            <div>
+                <label asp-for="AddressName"></label>
+            </div>            
             <input type="text" asp-for="AddressName" placeholder="Демокрация">
             <span asp-validation-for="AddressName" class="small text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Number"></label>
+            <div>
+                <label asp-for="Number"></label>
+            </div>
             <input type="text" asp-for="Number" placeholder="78Б">
             <span asp-validation-for="Number" class="small text-danger"></span>
         </div>
