--- a/ResidentialCommunityAssistant/Views/Owner/AllApartaments.cshtml
+++ b/ResidentialCommunityAssistant/Views/Owner/AllApartaments.cshtml
@@ -67,4 +67,4 @@
         </div>
     </div>
 }
-<script src="~/js/Owner/АddApartament.js"></script>
+<script src="~/js/Owner/AddApartament.js"></script>
