--- a/ResidentialCommunityAssistant/Views/Shared/_Layout.cshtml
+++ b/ResidentialCommunityAssistant/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Owner" asp-action="ChooseAddress">Вашите адреси</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="AllProducts">Магазин</a>
+                            </li>
                         }
                         
                     </ul>
