--- a/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
+++ b/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using ResidentialCommunityAssistant.Services.Models.Home
 @using ResidentialCommunityAssistant.Services.Models.HomeManager
 @using ResidentialCommunityAssistant.Services.Models.Owner
+@using ResidentialCommunityAssistant.Services.Models.Shop
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
