--- a/ResidentialCommunityAssistant/Views/Shared/_LoginPartial.cshtml
+++ b/ResidentialCommunityAssistant/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area=""  title="Manage">()Количка</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="ShoppingCard" title="Manage">()Количка</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name</a>
