--- a/ResidentialCommunityAssistant/Views/Shop/ShoppingCard.cshtml
+++ b/ResidentialCommunityAssistant/Views/Shop/ShoppingCard.cshtml
@@ -87,6 +87,7 @@
                 </div>
             </div>
         </div>
+        <a asp-controller="Shop" asp-action="ShopHistory" class="btn btn-primary mt-3">История на поръчките</a>
     </div>
 </section>
 
