ShopAdministrator area - modifire. Add functionality (add product, add quantity, edit existing one)

--- a/ResidentialCommunityAssistant/Areas/ShopAdministrator/Views/ShopМanagement/Index.cshtml
+++ b/ResidentialCommunityAssistant/Areas/ShopAdministrator/Views/ShopМanagement/Index.cshtml
@@ -2,3 +2,7 @@
     Layout = "_ShopAdministratorLayout";
 }
 <h2>Shop management</h2>
+
+<p>Здравейте!</p>
+<p>Като магазинер, Вие имате определени права и отговорности в магазина на сайта!</p>
+<p>Благодарим, че сте част от екипа!</p>
