--- a/ResidentialCommunityAssistant/Areas/ShopAdministrator/Views/_ViewImports.cshtml
+++ b/ResidentialCommunityAssistant/Areas/ShopAdministrator/Views/_ViewImports.cshtml
@@ -1,8 +1,2 @@
-﻿@using ResidentialCommunityAssistant
-@using ResidentialCommunityAssistant.Models
-@using ResidentialCommunityAssistant.Data.Models
-@using ResidentialCommunityAssistant.Services.Models.Home
-@using ResidentialCommunityAssistant.Services.Models.HomeManager
-@using ResidentialCommunityAssistant.Services.Models.Owner
-@using ResidentialCommunityAssistant.Services.Models.Shop
+﻿@using ResidentialCommunityAssistant.Services.Models.Shop.ShopManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
