--- a/ResidentialCommunityAssistant/Areas/ShopAdministrator/Views/Shared/_ShopAdministratorLayout.cshtml
+++ b/ResidentialCommunityAssistant/Areas/ShopAdministrator/Views/Shared/_ShopAdministratorLayout.cshtml
@@ -24,7 +24,13 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="ShopAdministrator" asp-controller="ShopМanagement" asp-action="Index">Начало</a>
-                            </li>   
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="ShopAdministrator" asp-controller="ShopМanagement" asp-action="AllProducts">Продукти</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="ShopAdministrator" asp-controller="ShopМanagement" asp-action="AddProduct">Добави продукт</a>
+                            </li>
                         }
 
                     </ul>
