--- a/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
+++ b/ResidentialCommunityAssistant/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using ResidentialCommunityAssistant.Services.Models.Home
 @using ResidentialCommunityAssistant.Services.Models.HomeManager
 @using ResidentialCommunityAssistant.Services.Models.Owner
-@using ResidentialCommunityAssistant.Services.Models.Shop
+@using ResidentialCommunityAssistant.Services.Models.Shop.ExtendedUser
+@using ResidentialCommunityAssistant.Services.Models.Shop.ShopManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
