--- a/ResidentialCommunityAssistant/Views/HomeManager/AddAddressSpecifics.cshtml
+++ b/ResidentialCommunityAssistant/Views/HomeManager/AddAddressSpecifics.cshtml
@@ -41,7 +41,7 @@
             </div>
             
             <div class="text-center">
-                <a asp-controller="Owner" asp-action="AllApartaments" asp-route-givenAddressId="@addressId" class="btn btn-primary mt-3">Приключих с въвеждането</a>
+                <a asp-controller="Owner" asp-action="ChooseAddress" class="btn btn-primary mt-3">Приключих с въвеждането</a>
             </div>
         </form>
     </div>
