--- a/ResidentialCommunityAssistant/Views/Owner/ChooseAddress.cshtml
+++ b/ResidentialCommunityAssistant/Views/Owner/ChooseAddress.cshtml
@@ -22,7 +22,7 @@
         </form>
     </div>
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">        
-        <a asp-controller="Home" asp-action="AddressSearch">Търсене на адрес</a>
+        <a asp-controller="Home" asp-action="AddressSearch" class="btn btn-primary">Търсене на адрес</a>
     </div>
 </div>
 
