--- a/ResidentialCommunityAssistant/Views/Owner/AllApartaments.cshtml
+++ b/ResidentialCommunityAssistant/Views/Owner/AllApartaments.cshtml
@@ -29,7 +29,7 @@
         }
         else
         {
-            if (isThisUserIsPartOfCommunity)
+            if (isThisUserIsPartOfCommunity || isThisUserIsManagerOfCurrentAddress)
             {
                 <p>Собственик: @apartament.Owner</p>
             }
